Use 82580(and I350) specific PHY read/write functions. Fixes PR#47542.